--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="lists"></div>
 
 		<div id="add-container">
-			<form action="">
+			<form action="" id="formitnew">
 				<input type="text" id="itnew" autocomplete="off" placeholder="Crear una nueva tarea...">	
 				<select name="" id="slist">
 					
