--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles/checkbox.css">
 	<link rel="stylesheet" href="styles/main.css">
 	<title>To-Do</title>
 </head>
